--- a/.github/workflows/create-url.yml
+++ b/.github/workflows/create-url.yml
@@ -34,24 +34,29 @@ jobs:
             while read -r line; do
             line="$line"
             echo "Line read from file - $line" 
-            base1="https://github.com/FiorelaCiroku/XD-Testing/tree/main/ontology-network/musical-performance-ontology/"
-            base2="/SPARQLUnitTest/CQTestCase"
-            echo "$testcase"
-            testcase="$base1$line$base2"
-            echo "The url of the test case is $testcase"
+            base="https://raw.githubusercontent.com/FiorelaCiroku/XD-Testing/main/ontology-network/musical-performance-ontology/"
+            CQbase="/SPARQLUnitTest/CQTestCase"
+            IVbase="/InferenceVerificationTest/IVTestCase/"
+            EPbase="/ErrorProvocationTest/EPTestCase/"
+            echo "$CQtestcase"
+            echo "$IVtestcase"
+            echo "$EPtestcase"
+            CQtestcase="$base$line$CQbase"
+            IVtestcase="$base$line$IVbase"
+            EPtestcase="$base$line$EPbase"
+            
+            echo "The prefixes of the test cases are is $CQtestcase, $IVtestcase, $EPtestcase."
             done < UserInput.txt
       
       
       - name: dataset-url
         run: |
+            
         
       
       - name: ontology-url
         run: |
-            
-            
-      
-                  
+           
               
               
               
