--- a/.github/workflows/setup-environment.yml
+++ b/.github/workflows/setup-environment.yml
@@ -1,17 +1,43 @@
+# This is a workflow that is able to create temporary urls for the test cases and dataset files.
+# Trigger: Input cross check completed successfully. 
+# Input: The directory path of a test case or dataset file. 
+# Output: Four urls that are needed for a test case: 1. the test case url, 2. the corresponding dataset url, 3. the ontology url, 4. The OWL ontology url.
+
+# The name of the workflow
 name: Setup environment
+
+# The event that triggers the action.
 on: 
   push
   
-jobs:    
-  setup-java: 
+jobs:
+# This workflow contains a job called "setup"
+  setup: 
+
+# The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+# Steps that are executed for this job
     steps: 
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v2.4.0
-      with:
-        distribution: 'temurin' 
-        java-version: '17'
-    - run: git clone https://github.com/luigi-asprino/owl-unit.git
+
+# Checks-out your repository under $GITHUB_WORKSPACE, so the job can access it
+      - uses: actions/checkout@v2
+
+# Sets up java in the server
+      - name: Setup-JAVA
+        uses: actions/setup-java@v2.4.0
+        with:
+          distribution: 'temurin' 
+          java-version: '17'
+        
+      - name: Setup-OWLUnit
+        run: |
+            curl -s https://api.github.com/repos/jgm/pandoc/releases/latest \
+            grep "browser_download_url.*deb" \
+            cut -d : -f 2,3 \
+            tr -d \" \
+            wget -qi -
+            echo "OWLUnit jar has been successfully downloaded!"
 
 
       
