--- a/.github/workflows/setup-environment.yml
+++ b/.github/workflows/setup-environment.yml
@@ -32,7 +32,7 @@ jobs:
         
       - name: Setup-OWLUnit
         run: |
-            read repo"?type https://api.github.com/repos/luigi-asprino/owl-unit/releases/latest : ";
+            read repo"?type https://github.com/luigi-asprino/owl-unit/releases/latest : ";
             URL=`curl -s "${repo}" | grep "browser_download_url" | cut -d '"' -f 4 | fzf`
             curl -sOL ${URL}
             echo "OWLUnit jar has been successfully downloaded!"
