--- a/.github/workflows/setup-environment.yml
+++ b/.github/workflows/setup-environment.yml
@@ -32,9 +32,14 @@ jobs:
         
       - name: Setup-OWLUnit
         run: |
-            read repo"?type https://github.com/luigi-asprino/owl-unit/releases/latest : ";
-            URL=`curl -s "${repo}" | grep "browser_download_url" | cut -d '"' -f 4 | fzf`
-            curl -sOL ${URL}
+            if [ "${OSTYPE}" = "x86_64" ]; then
+              BIN="amd64"
+            else
+              BIN="arm64"
+            fi
+            LATEST=$(curl -s https://api.github.com/repos/luigi-asprino/owl-unit/releases/latest | grep "linux-${BIN}.tar.gz" | cut -d '"' -f 4 | tail -1)
+            cd /tmp/
+            curl -s -LJO $LATEST
             echo "OWLUnit jar has been successfully downloaded!"
 
 
