--- a/.github/workflows/setup-environment.yml
+++ b/.github/workflows/setup-environment.yml
@@ -32,11 +32,19 @@ jobs:
         
       - name: Setup-OWLUnit
         run: |
+            # curl -s https://api.github.com/repos/luigi-asprino/owl-unit/releases/latest \
+            # | grep browser_download_url \
+            # | cut -d : -f 2,3 \
+            # | tr -d \" \
+            # | wget -qi -
+            
+            $ file="$(
             curl -s https://api.github.com/repos/luigi-asprino/owl-unit/releases/latest \
             | grep browser_download_url \
-            | cut -d : -f 2,3 \
-            | tr -d \" \
-            | wget -qi -
+            | sed -re 's/.*: "([^"]+)".*/\1/' \
+            )"
+            $ echo ${file##*/}
+
             echo "OWLUnit jar has been successfully downloaded!"
 
 
