--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -36,9 +36,47 @@ jobs:
             | cut -d : -f 2,3 \
             | tr -d \" \
             | wget -qi -
+            
+      - name: testcase-url
+        run: |
+            cd ontology-network
+            cd musical-performance-ontology
+            while read -r line; do
+            line="$line"
+            base="https://raw.githubusercontent.com/FiorelaCiroku/XD-Testing/main/ontology-network/musical-performance-ontology/"
+            CQbase="/SPARQLUnitTest/CQTestCase"
+            IVbase="/InferenceVerificationTest/IVTestCase/"
+            EPbase="/ErrorProvocationTest/EPTestCase/"
+            echo "$CQtestcase"
+            echo "$IVtestcase"
+            echo "$EPtestcase"
+            CQtestcase="$base$line$CQbase"
+            IVtestcase="$base$line$IVbase"
+            EPtestcase="$base$line$EPbase"
+            echo "The prefixes of the test cases are is $CQtestcase, $IVtestcase, $EPtestcase."
+            done < UserInput.txt
       
       - name: Run test
         run: |
             java -jar OWLUnit-0.3.2.jar -c https://raw.githubusercontent.com/luigi-asprino/owl-unit/main/examples/cq1.ttl
+            
+            cd ontology-network
+            cd musical-performance-ontology
+            while read -r line; do
+            line="$line"
+            cd $line
+            cd SPARQLUnitTest
+            cd CQTestCase
+            base="https://raw.githubusercontent.com/FiorelaCiroku/XD-Testing/main/ontology-network/musical-performance-ontology/"
+            CQbase="/SPARQLUnitTest/CQTestCase"
+            echo "$CQtestcase"
+            CQtestcase="$base$line$CQbase"
+            for file in *.ttl
+            do 
+             echo " The file is $file"
+              testcaseURL="$CQtestcase$file"
+              java -jar OWLUnit-0.3.2.jar -c $testcaseURL
+            done
+            done < UserInput.txt
 
-  
+  https://raw.githubusercontent.com/FiorelaCiroku/XD-Testing/main/ontology-network/musical-performance-ontology/Situation/SPARQLUnitTest/CQTestCase/CQTestCase.owl
