--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -59,6 +59,8 @@ jobs:
              # cd ~
             done
             cd ~
+            result=${PWD##*/}
+            printf '%s\n' "${PWD##*/}"
             java -jar OWLUnit-0.3.2.jar -c $testcaseURL
             
      
