--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -63,8 +63,8 @@ jobs:
             cd ..
             cd ..
             cd ..
-            result=${PWD##*/}
-            printf '%s\n' "${PWD##*/}"
+            # result=${PWD##*/}
+            # printf '%s\n' "${PWD##*/}"
             java -jar OWLUnit-0.3.2.jar -c $testcaseURL
             
      
