--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -55,18 +55,16 @@ jobs:
             do 
              # echo " The file is $file"
              testcaseURL="$CQtestcase$file"
-             # echo "Test case URL is $testcaseURL"
-             # cd ~
-            done
-            cd ..
-            cd ..
-            cd ..
-            cd ..
-            cd ..
-            # result=${PWD##*/}
-            # printf '%s\n' "${PWD##*/}"
-            java -jar OWLUnit-0.3.2.jar -c $testcaseURL
-            
+             echo "Test case URL is $testcaseURL
+             cd ..
+             cd ..
+             cd ..
+             cd ..
+             cd ..
+             # result=${PWD##*/}
+             # printf '%s\n' "${PWD##*/}"
+             java -jar OWLUnit-0.3.2.jar -c $testcaseURL
+            done          
      
             
 
