--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,7 +1,7 @@
-# This is a workflow that is able to create temporary urls for the test cases and dataset files.
-# Trigger: Input cross check completed successfully. 
-# Input: The directory path of a test case or dataset file. 
-# Output: Four urls that are needed for a test case: 1. the test case url, 2. the corresponding dataset url, 3. the ontology url, 4. The OWL ontology url.
+# This is a workflow that is able to run a test case.
+# Trigger: A commit to the test case directory. 
+# Input: The user input file to get the name of the cc that we are testing. 
+# Output: The execution of a test case. 
 
 # The name of the workflow
 
