--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -8,7 +8,12 @@
 name: Run testcase
 
 # The event that triggers the action.
-on: [push]
+on: 
+  push: 
+    branches: 
+      - main
+    paths: 
+      - 'ontology-network/musical-performance-ontology/**'
  
 jobs:
 
