--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -48,7 +48,7 @@ jobs:
             cd musical-performance-ontology
             while read -r line; do
             line="$line"
-            echo "CC is $line"
+            # echo "CC is $line"
             cd $line
             base="https://raw.githubusercontent.com/FiorelaCiroku/XD-Testing/main/ontology-network/musical-performance-ontology/"
             CQbase="/SPARQLUnitTest/CQTestCase/"
