--- a/.github/workflows/create-directory.yml
+++ b/.github/workflows/create-directory.yml
@@ -8,13 +8,8 @@
 name: Create directory
 
 # The event that triggers the action is a commit to the ontology module directory. 
-on: 
-  push: 
-    branches: 
-      - main
-    paths: 
-      - 'ontology-network/musical-performance-ontology/**'
-  # workflow_dispatch:
+on:
+   workflow_dispatch:
   
 jobs:
   
