--- a/.github/workflows/create-issue.yml
+++ b/.github/workflows/create-issue.yml
@@ -13,7 +13,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ISSUE_TOKEN }}
         with:
-          filename: .github/test_analysis.md
+          filename: .github/ISSUE_TEMPLATE/test_analysis.md
           assignees: FiorelaCiroku
           update_existing: true
           search_existing: all
