--- a/.github/workflows/setup-environment.yml
+++ b/.github/workflows/setup-environment.yml
@@ -1,7 +1,7 @@
 # This is a workflow that is able to create temporary urls for the test cases and dataset files.
 # Trigger: Input cross check completed successfully. 
-# Input: The directory path of a test case or dataset file. 
-# Output: Four urls that are needed for a test case: 1. the test case url, 2. the corresponding dataset url, 3. the ontology url, 4. The OWL ontology url.
+# Input: 
+# Output: 
 
 # The name of the workflow
 name: Setup environment
