--- a/.github/workflows/crosscheck-input.yml
+++ b/.github/workflows/crosscheck-input.yml
@@ -44,11 +44,12 @@ jobs:
             # This script checks if the input that is necessary to run the test are non empty files. 
             for file in *.txt
             do 
+              counter=0
               if [ -s $file ] 
               then
                 rm -f empty.txt
                 touch full.txt
-                $counter=$counter+1
+                counter=counter+1
                 echo "$file is not empty"
             else
                 # The file is empty.
