--- a/.github/workflows/crosscheck-input.yml
+++ b/.github/workflows/crosscheck-input.yml
@@ -49,7 +49,7 @@ jobs:
               then
                 rm -f empty.txt
                 touch full.txt
-                counter++
+                counter=$((counter+1))
                 echo "$file is not empty"
             else
                 # The file is empty.
