--- a/.github/workflows/crosscheck-input.yml
+++ b/.github/workflows/crosscheck-input.yml
@@ -60,7 +60,7 @@ jobs:
             done
             echo "Counter is $counter"
             done < UserInput.txt
-            if [counter<4]
+            if ((counter<4))
               then 
                 echo "Missing files: Test run cannot start!"
               else
