--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -52,7 +52,7 @@ jobs:
             # echo "CC is $line"
             cd $line
             var=(git rev-parse --show-toplevel)
-            echo "$var"
+            echo "Var variable is $var"
             base="https://raw.githubusercontent.com/FiorelaCiroku/XD-Testing/main/ontology-network/musical-performance-ontology/"
             CQbase="/SPARQLUnitTest/CQTestCase/"
             echo "$CQtestcase"
