--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -51,7 +51,7 @@ jobs:
             line="$line"
             # echo "CC is $line"
             cd $line
-            var=(git rev-parse --show-toplevel)
+            var=$(git rev-parse --show-toplevel)
             echo "Var variable is $var"
             base="https://raw.githubusercontent.com/FiorelaCiroku/XD-Testing/main/ontology-network/musical-performance-ontology/"
             CQbase="/SPARQLUnitTest/CQTestCase/"
